@@ -342,14 +342,14 @@ devGrob.lines <- function(x, dev) {
 }
 
 devGrob.points <- function(x, dev) {
-  loc <- locToInches(x$x, x$y, dev)
-  list(name = x$name,
-       x = cx(loc$x, dev),
-       y = cy(loc$y, dev),
-       size = cd(dToInches(x$size), dev),
-       angle = current.rotation(),
-       classes = x$classes,
-       pch = x$pch)
+    loc <- locToInches(x$x, x$y, dev)
+    list(name = x$name,
+         x = cx(loc$x, dev),
+         y = cy(loc$y, dev),
+         size = cd(dToInches(x$size), dev),
+         angle = current.rotation(),
+         classes = x$classes,
+         pch = x$pch)
 }
 
 devGrob.polygon <- function(x, dev) {
@@ -1201,20 +1201,20 @@ adjustSymbolSize <- function(pointSize, pgp) {
     # fontsize information but not when the *grob* has it.
     # Also, not recording on the DL because this viewport wasn't part
     # of the original vp tree.
-    if (! is.null(pgp$cex) || ! is.null(pgp$fontsize)) {
+    if (!is.null(pgp$cex) || !is.null(pgp$fontsize)) {
         xscale <- current.viewport()$xscale
         yscale <- current.viewport()$yscale
-        if (! (is.null(pgp$cex) & is.null(pgp$fontsize))) {
+        if (!is.null(pgp$cex) & !is.null(pgp$fontsize)) {
             pushViewport(viewport(xscale = xscale, yscale = yscale,
                                   gp = gpar(cex = pgp$cex,
-                                      fontsize = pgp$fontsize)),
+                                            fontsize = pgp$fontsize)),
                          recording = FALSE)
-        } else if (! is.null(pgp$cex)) {
+        } else if (!is.null(pgp$cex)) {
             pushViewport(viewport(xscale = xscale, yscale = yscale,
                                   gp = gpar(cex = pgp$cex)),
                          recording = FALSE)
         } else {
-            # if (! is.null(pgp$fontsize))
+            ## if (!is.null(pgp$fontsize))
             pushViewport(viewport(xscale = xscale, yscale = yscale,
                                   gp = gpar(fontsize = pgp$fontsize)),
                          recording = FALSE)
@@ -1230,17 +1230,35 @@ primToDev.points <- function(x, dev) {
     # length of x and y already checked in grid.points
     n <- length(x$x)
 
-    # Expand the gp such that it fully defines all sub-grobs
-    gp <- expandGpar(x$gp, n)
+    pgp <- x$gp
+
+    ## Force a stroke-width, col, and fill
+    if (is.null(pgp$lwd)) {
+        pgp$lwd <- get.gpar()$lwd
+    }
+    if (is.null(pgp$col)) {
+        pgp$col <- get.gpar()$col
+    }
+    if (is.null(pgp$fill)) {
+        pgp$fill <- get.gpar()$fill
+    }
+
+    ## Expand the gp such that it fully defines all sub-grobs
+    pgp <- expandGpar(pgp, n)
 
     x$name <- getID(x$name, "grob")
 
-    # Grouping each sub-grob
+    ## Grouping each sub-grob
     devStartGroup(devGrob(x, dev), NULL, dev) 
 
-    # For testing validity, convert to numerics
-    chinds <- which(! is.na(x$pch) &
-                    ! as.character(x$pch) %in% as.character(c(0:25, 32:127)))
+    ## For testing validity, convert to numerics
+    if (is.numeric(x$pch)) {
+        chinds <- numeric()
+    } else {
+        chinds <- which(!is.na(x$pch) &
+                        !(as.character(x$pch) %in%
+                          as.character(c(0:25, 32:127))))
+    }
     pchtest <- x$pch
     if (length(chinds) > 0) {
         newpch <- integer(length(pchtest))
@@ -1249,76 +1267,57 @@ primToDev.points <- function(x, dev) {
         newpch[!chinds] <- as.numeric(pchtest[!chinds])
         pchtest <- newpch
     }
-
     if (any(!is.na(pchtest) &
             !pchtest %in% c(0:25, 32:127)))
         stop("Unsupported pch value")
 
-    # These can differ for points
+    ## These can differ for points
     pchs <- rep(pchtest, length.out = n)
     sizes <- rep(x$size, length.out = n)
 
-    # Assume we need to define the point symbol
-    createDef <- TRUE
+    ## Check whether the point symbol has been used yet
+    pchUsageTable <- get("pchUsageTable", envir = .gridSVGEnv)
+    ## Update usages
+    pchUsageTable[pchs + 1, "used"] <- TRUE
+    assign("pchUsageTable", pchUsageTable, envir = .gridSVGEnv)
 
-    for (i in 1:n) {
-        
-        if (is.na(pchs[i])) break
-        
-        # Check whether the point symbol has been used yet
-        pchUsageTable <- get("pchUsageTable", envir = .gridSVGEnv)
-        # Update usages
-        pchUsageTable[pchs[i] + 1, "used"] <- TRUE
-        assign("pchUsageTable", pchUsageTable, envir = .gridSVGEnv)
-
-        pgp <- gp[i]
-
-        if (! is.unit(sizes[i]) && is.numeric(sizes[i])) {
-            # Just a number -- convert to a unit
-            pointSize <- unit(sizes[i], x$default.units)
-        } else {
-            # All other units
-            pointSize <- sizes[i]
-        }
-        
-        asciipch <- if (pchs[i] %in% 32:127)
-                        rawToChar(as.raw(pchs[i]))
-                    else
-                        pchs[i]
-
-        # Force a stroke-width
-        pgp$lwd <- if (is.null(pgp$lwd)) get.gpar()$lwd
-                   else pgp$lwd
-
-        if (pchs[i] < 15)
-            pgp$fill <- "transparent"
-
-        if (pchs[i] %in% 15:20 | pchs[i] >= 32) {
-            # 46 == "."
-            # Don't do anything for a "." because we need a
-            # stroke for it to be visible
-            if (pchs[i] != 46) {
-                pgp$fill <- if (is.null(pgp$col)) get.gpar()$col
-                            else pgp$col
-                if (pchs[i] %in% 15:18 | pchs[i] >= 32)
-                    pgp$col <- "transparent"
-            }
-        }
-
-        # Size is now relative to text so use text grob
-        if (pchs[i] >= 32)
-            pointSize <- grobWidth(textGrob(asciipch))
-
-        # Enforce gp$cex or gp$fontsize
-        pointSize <- adjustSymbolSize(pointSize, pgp)
-        
-        devUseSymbol(devGrob(pointsGrob(x$x[i], x$y[i],
-                                        pch = asciipch,
-                                        size = pointSize,
-                                        default.units = x$default.units,
-                                        name = subGrobName(x$name, i)), dev),
-                     gparToDevPars(pgp), dev)
+    if (!is.unit(sizes) && is.numeric(sizes)) {
+        ## Just a number -- convert to a unit
+        pointSize <- unit(sizes, x$default.units)
+    } else {
+        ## All other units
+        pointSize <- sizes
     }
+
+    if (any(pchs) %in% 32:127) {
+        asciipch <- sapply(pchs, function(x) rawToChar(as.raw(x)))
+    } else {
+        asciipch <- pchs
+    }
+
+    pgp$fill[pchs < 15] <- "transparent"
+
+    ## 46 == "."
+    ## Don't do anything for a "." because we need a
+    ## stroke for it to be visible
+    noStroke <- pchs %in% 15:20 | (pchs >= 32 & pchs != 46)
+    if (any(noStroke)) {
+        pgp$fill[noStroke] <- pgp$col[noStroke]
+        pgp$col[noStroke & pchs %in% 15:18] <- "transparent"
+    }
+
+    ## Size is now relative to text so use text grob
+    ## pointSize[pchs >= 32] <- grobWidth(textGrob(asciipch[pchs >= 32]))
+
+    ## Enforce gp$cex or gp$fontsize
+    pointSize <- adjustSymbolSize(pointSize, pgp)
+
+    pg <- pointsGrob(x$x, x$y,
+                     pch = asciipch,
+                     size = pointSize,
+                     default.units = x$default.units,
+                     name = subGrobName(x$name, 1:n))
+    devUseSymbol(devGrob(pg, dev), gparToDevPars(pgp), dev)
 
     # Ending the group
     devEndGroup(x$name, FALSE, dev)
